fix dead image and align home page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -78,11 +78,11 @@ ul {
     margin: 0;
 }
 
-li {
+/* li {
     border: 1px solid black;
     padding: 10px;
     margin-bottom: 10px;
-}
+} */
 
 h2 {
     margin-top: 0;
